<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/item_edit_entry_name"
        android:title="@string/edit_entry_name"
        android:icon="@drawable/ic_edit_name"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/item_edit_entry_text"
        android:title="@string/edit_text"
        android:icon="@drawable/ic_edit_text"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/item_auto_scroll"
        android:title="@string/autoscroll"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_autoscroll" />

    <item android:id="@+id/item_copy_content"
        android:title="@string/copy_content"
        android:icon="@drawable/ic_copy"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/item_menu_add_to"
        android:title="@string/add_to"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_add_to" />

    <item android:id="@+id/item_menu_move_to"
        android:title="@string/move_to"
        android:icon="@drawable/ic_move_to"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/item_menu_remove_from_parent"
        android:title="@string/remove_from_parent"
        android:icon="@drawable/ic_close"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/item_displaying_mode"
        android:title="@string/displaying_mode" />

    <item android:id="@+id/item_menu_remember_pos"
        android:visible="true"
        android:checkable="true"
        android:title="@string/remember_last_pos" />

    <item android:id="@+id/item_delete_entry"
        android:icon="@drawable/ic_delete"
        android:title="@string/delete"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/item_debug_show_id"
        android:title="Show id" />
</menu>