<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/item_menu_change_name"
        android:title="@string/edit_name"
        android:icon="@drawable/ic_edit_name"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/item_menu_sort_mode"
        android:title="@string/sort_mode"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_sort_mode"/>

    <item android:id="@+id/item_menu_add_to"
        android:title="@string/add_to"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_add_to" />

    <item android:id="@+id/item_menu_move_to"
        android:title="@string/move_to"
        android:icon="@drawable/ic_move_to"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/item_menu_remove_from_parent"
        android:title="@string/remove_from_parent"
        android:icon="@drawable/ic_close"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/item_menu_delete"
        android:title="@string/delete"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_delete"/>

</menu>