<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!--item android:id="@+id/item_edit_change_entries_order"-->


    <item android:id="@+id/item_change_document_name"
        android:title="@string/edit_document_name"
        android:icon="@drawable/ic_edit_name"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/item_invert_in_document"
        android:title="@string/invert"
        android:icon="@drawable/ic_sort"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/item_edit_entries_list"
        android:title="@string/edit_entries_list"
        android:icon="@drawable/ic_edit_list"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/item_choose_entry_sort_mode"
        android:title="@string/sort_mode"
        app:showAsAction="never" />

    <item android:id="@+id/item_delete_document"
        android:title="@string/delete"
        android:icon="@drawable/ic_delete"
        app:showAsAction="ifRoom"/>
</menu>