<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/order"
        android:textColor="?textColor"
        android:textSize="16sp" />

    <com.maxsavitsky.documenter.ui.widget.CustomRadioGroup
        android:id="@+id/radio_group_order"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:textColor="?textColor"
            android:text="@string/groups_first" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:textColor="?textColor"
            android:text="@string/entries_first" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:textColor="?textColor"
            android:text="@string/mixed" />
    </com.maxsavitsky.documenter.ui.widget.CustomRadioGroup>

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sorting"
        android:textColor="?textColor"
        android:textSize="16sp" />

    <com.maxsavitsky.documenter.ui.widget.CustomRadioGroup
        android:id="@+id/radio_group_sorting"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:textColor="?textColor"
            android:text="@string/by_name" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:textColor="?textColor"
            android:text="@string/by_creation_time" />
    </com.maxsavitsky.documenter.ui.widget.CustomRadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/ascending_descending_order"
        android:textColor="?textColor"
        android:textSize="16sp" />

    <com.maxsavitsky.documenter.ui.widget.CustomRadioGroup
        android:id="@+id/radio_group_ascending_descending"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:textColor="?textColor"
            android:text="@string/ascending" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:textColor="?textColor"
            android:text="@string/descending" />
    </com.maxsavitsky.documenter.ui.widget.CustomRadioGroup>
</LinearLayout>