<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:title="@string/sort_by"
        android:id="@+id/item_sort_documents"
        android:icon="@drawable/ic_sort"
        app:showAsAction="ifRoom" />

    <item android:title="@string/edit_category_name"
        android:id="@+id/menu_edit_name"
        android:icon="@drawable/ic_edit_name"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/item_edit_documents_list"
        android:title="@string/edit_documents_list"
        android:icon="@drawable/ic_edit_list"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/item_category_choose_sort_mode"
        android:title="@string/sort_mode"
        app:showAsAction="never"/>

    <item android:title="@string/delete"
        android:id="@+id/item_delete"
        android:icon="@drawable/ic_delete"
        app:showAsAction="ifRoom"/>
</menu>