<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.maxsavitsky.documenter.ui.widget.FabMenu
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        app:menu_icon="@drawable/ic_more_horiz_24"
        android:layout_margin="@dimen/fab_margin"
        android:id="@+id/fab_menu"
        app:menu_colorNormal="?fabButtonColor">

        <com.maxsavitsky.documenter.ui.widget.FabButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_label="@string/settings"
            android:id="@+id/fabSettings"
            android:src="@drawable/ic_settings_24" />

        <com.maxsavitsky.documenter.ui.widget.FabButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_free_entry_24"
            android:id="@+id/fabFreeEntries"
            app:fab_label="@string/free_entries" />

        <com.maxsavitsky.documenter.ui.widget.FabButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fabCreateNew"
            android:src="@drawable/ic_plus_24"
            app:fab_label="@string/create_new" />

    </com.maxsavitsky.documenter.ui.widget.FabMenu>

</androidx.coordinatorlayout.widget.CoordinatorLayout>